@@ -714,7 +714,7 @@ Vue.component('lms-iframe-dialog', {
     <v-toolbar app-data class="dialog-toolbar" @mousedown="mouseDown" id="iframe-toolbar">
      <lms-windowcontrols v-if="queryParams.nativeTitlebar && queryParams.tbarBtnsPos=='l'"></lms-windowcontrols>
      <div class="drag-area-left"></div>
-     <v-btn flat icon v-longpress:stop="goBack" :title="ttShortcutStr(i18n('Go back'), 'esc')"><v-icon>arrow_back</v-icon></v-btn>
+     <v-btn flat icon @click="goBack" :title="ttShortcutStr(i18n('Go back'), 'esc')"><v-icon>arrow_back</v-icon></v-btn>
      <v-btn v-if="showHome && homeButton" flat icon @click="goHome" :title="ttShortcutStr(i18n('Go home'), 'home')"><v-icon>home</v-icon></v-btn>
      <v-toolbar-title v-if="playerId && numPlayers>1 && (page=='player' || page=='extras')" @click="openChoiceMenu" class="pointer">{{title}} <v-icon>arrow_drop_down</v-icon></v-toolbar-title>
      <v-toolbar-title v-else>{{title}}</v-toolbar-title>
@@ -896,12 +896,8 @@ Vue.component('lms-iframe-dialog', {
                 this.loadTimer = undefined;
             }
         },
-        goBack(longpress) {
+        goBack() {
             if (!this.show) {
-                return;
-            }
-            if (longpress && this.showHome) {
-                this.goHome();
                 return;
             }
             if (this.history.length<1) {
