@@ -17,7 +17,7 @@ Vue.component('lms-player-settings-plugin', {
      <v-toolbar app-data class="dialog-toolbar" @mousedown="mouseDown" id="psp-toolbar">
       <lms-windowcontrols v-if="queryParams.nativeTitlebar && queryParams.tbarBtnsPos=='l'"></lms-windowcontrols>
       <div class="drag-area-left"></div>
-      <v-btn flat icon v-longpress:stop="goBack" :title="ttShortcutStr(i18n('Go back'), 'esc')"><v-icon>arrow_back</v-icon></v-btn>
+      <v-btn flat icon @click="goBack" :title="ttShortcutStr(i18n('Go back'), 'esc')"><v-icon>arrow_back</v-icon></v-btn>
       <v-btn v-if="showHome && homeButton" flat icon @click="goHome" :title="ttShortcutStr(i18n('Go home'), 'home')"><v-icon>home</v-icon></v-btn>
       <v-toolbar-title>{{title}}</v-toolbar-title>
       <v-spacer class="drag-area"></v-spacer>
@@ -108,12 +108,8 @@ Vue.component('lms-player-settings-plugin', {
         }.bind(this));
      },
      methods: {
-        goBack(longpress) {
-            if (longpress && this.showHome) {
-                this.goHome();
-            } else {
-                this.navigateBack(false);
-            }
+        goBack() {
+            this.navigateBack(false);
         },
         goHome() {
             this.close();
