@@ -4,6 +4,7 @@
    Herger.
 2. Allow for more items in scrolled window if view is wider.
 3. Allow placing 'Explore' into a scrolled list.
+4. Remove long-press on back button - as seems to have issues on iOS.
 
 6.0.5
 -----
